<resources>
    <string name="app_name">Vortex</string>
    <string name="USERS">users</string>
    <string name="TOKEN">token</string>
    <string name="PRESENCE">presence</string>
    <string name="PHONE_NUMBER">phone_number</string>
    <string name="NAME">name</string>
    <string name="welcome_to_vortex">Welcome to Vortex</string>
    <string name="read_our_privacy_policy_tap_agree_and_continue_to_accept_the_terms_of_services">Read our Privacy Policy. Tap Agree and continue to accept the Terms of Services</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="from">from</string>
    <string name="s_a_m_s_u_n_g">S A M S U N G</string>
    <string name="CROPPED">cropped</string>
    <string name="IMAGE">image</string>
    <string name="PROFILE_IMAGES">profile_images</string>
    <string name="UPDATE_PROFILE_IMAGE_TITLE">Updating Profile Image</string>
    <string name="UPDATE_PROFILE_IMAGE_DESCRIPTION">Please wait, your image is updating…</string>
    <string name="CONTINUE">Continue</string>
    <string name="VERIFICATION_CODE_TITLE">Verification code</string>
    <string name="VERIFICATION_CODE_DESCRIPTION">Please wait, while we are verifying your code</string>
    <string name="PHONE_VERIFICATION_TITLE">Phone Verification</string>
    <string name="PHONE_VERIFICATION_DESCRIPTION">Please wait, while we are authenticating your phone…</string>
    <string name="UID">uid</string>
    <string name="CHATS">Chats</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MESSAGES">messages</string>
    <string name="STATUS">status</string>
    <string name="LAST_MESSAGE">last_message</string>
    <string name="LAST_MESSAGE_TIME">last_message_time</string>
    <string name="LAST_MESSAGE_DETAILS">last_message_details</string>
    <string name="LAST_MESSAGE_WITH_">last_message_with_</string>
    <string name="TAP_TO_CHAT">Tap to Chat</string>
    <string name="VISIT_USER_ID">visit_user_id</string>
    <string name="VISIT_USER_NAME">visit_user_name</string>
    <string name="VISIT_USER_IMAGE">visit_user_image</string>
    <string name="CANCEL">Cancel</string>
    <string name="type_message_here">Type message here</string>
    <string name="custom_slide_cancel_text">Slide to cancel</string>
    <string name="custom_cancel_text">Cancel</string>
    <string name="custom_hint_text">Hold to record, release to send</string>
    <string name="SENDING_FILE_TITLE">Sending File</string>
    <string name="SENDING_FILE_DESCRIPTION">Please wait, while we are sending your file…</string>
    <string name="SEARCH_MESSAGE">search_message</string>
    <string name="TEXT">text</string>
    <string name="VIDEO">video</string>
    <string name="PDF_FILES">pdf_file</string>
    <string name="AUDIO_RECORDING">audio_recording</string>
    <string name="CONTACT">contact</string>
    <string name="URL">url</string>
    <string name="MESSAGE_ID">messageId</string>
    <string name="TITLE">title</string>
    <string name="MESSAGE">message</string>
    <string name="TYPE">type</string>
    <string name="RECEIVER_ID">receiverId</string>
    <string name="SENDER_ID">senderId</string>
    <string name="ICON">icon</string>
    <string name="TO">to</string>
    <string name="DATA">data</string>
    <string name="CONTENT_TYPE">Content-Type</string>
    <string name="AUTHORIZATION">Authorization</string>
    <string name="APPLICATION_JSON">application/json</string>
    <string name="SERVER_KEY">key=AAAASzaL5ZI:APA91bGyrryRDT3lBnZahZKiHVcgnbhXNAF_KTKtK4eBvg2DH3P3Tumo31RQ5H_PhqK0gYMx_kBSZZAqwY1enLnwyWaS9tjX5TFauxj8fxqlsmXJKhJSncOtEVo2fyOAstPgeGdU-CNZ</string>
    <string name="CURRENT_USER_ID">current_user_id</string>
    <string name="USER_MESSAGE_TEXT">user_message_text</string>
    <string name="STARRED_MESSAGES">StarredMessages</string>
    <string name="STARRED">starred</string>
    <string name="UNSTAR">Unstar</string>
    <string name="STAR">star</string>
    <string name="STAR_MESSAGE_WITH_RECEIVER">StarMessageWithReceiver</string>
    <string name="IS_FROM_STORIES">isFromStories</string>
    <string name="IMAGE_URI">image_uri</string>
    <string name="VIDEO_URI">video_uri</string>
    <string name="FILE_TYPE">file_type</string>
    <string name="IMAGE_FILES">Image Files</string>
    <string name="IMAGE_URL_USED_BY_USERS">ImageUrlUsedByUsers</string>
    <string name="USER_MESSAGE_IMAGE">user_message_image</string>
    <string name="VIDEO_FILES">Video Files</string>
    <string name="VIDEO_URL_USED_BY_USERS">video_url_used_by_users</string>
    <string name="USER_MESSAGE_VIDEO">user_message_video</string>
    <string name="doc_url_used_by_users">doc_url_used_by_users</string>
    <string name="USER_MESSAGE_FILE">user_message_file</string>
    <string name="shared_images">shared_images</string>
    <string name="play_icon">play_icon\n</string>
    <string name="PHONE">phone</string>
    <string name="CONTACTS">contacts</string>
    <string name="AUDIO_RECORDING_FILES">AUDIO RECORDING FILES</string>
    <string name="AUDIO_RECORDING_URL_BY_USERS">audio_recording_url_used_by_users</string>
    <string name="PROFILE_IMAGE">profileImage</string>
    <string name="LAST_UPDATED">lastUpdated</string>
    <string name="STATUSES">statuses</string>
    <string name="STORIES">stories</string>
    <string name="CALLER">caller</string>
    <string name="RECEIVER">receiver</string>
    <string name="IS_CALL_MADE">isCallMade</string>
    <string name="VIDEO_USERS">VideoUsers</string>
    <string name="MISSED_CALL">Missed</string>
    <string name="INCOMING">Incoming</string>
    <string name="OUTGOING">Outgoing</string>
    <string name="IS_AVAILABLE">isAvailable</string>
    <string name="CONN_ID">connId</string>
    <string name="CALL_ACCEPTED">call_accepted</string>
    <string name="FRIEND_USER_NAME">friend_username</string>
    <string name="Calls">Calls</string>
    <string name="CALL_LOGS">CallLogs</string>
    <string name="IS_FROM_CALL_LOG">is_from_call_log</string>
    <string name="CALL_LOG">call_log</string>
    <string name="isviewcontactfromprofile">IsViewContactFromProfile</string>
    <string name="SENT">sent</string>
    <string name="SEEN">seen</string>
    <string name="DELIVERED">delivered</string>
    <string name="CONTACT_ID">contactId</string>
    <string name="CHAT_BG_FOR_USERS">chatBgForUsers</string>
    <string name="selected_type">selected_type</string>
    <string name="bright">bright</string>
    <string name="dark">dark</string>
    <string name="solids">solids</string>
    <string name="IMAGE_ID">imageId</string>
    <string name="you">You</string>
</resources>