<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_vortex"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorPrimary"
            />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/icon"
            android:layout_margin="50dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_our_privacy_policy_tap_agree_and_continue_to_accept_the_terms_of_services"
            android:padding="15dp"
            android:textSize="16sp"
            android:gravity="center"
            />

        <Button
            android:id="@+id/btn_agree_and_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#50CF55"
            android:textColor="@android:color/white"
            android:text="@string/agree_and_continue"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20sp"
        android:layout_alignParentBottom="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_a_m_s_u_n_g"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#50CF55"
            />
    </LinearLayout>
</RelativeLayout>